Added Posting Photos

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -8,7 +8,10 @@
 
            <!-- Text post -->
            <div class="icons " style="text-align:right;">
-             <i class="glyphicon glyphicon-camera input-icon" style="color:#0070ff;"></i>
+             
+                 <span class="btn btn-default btn-file">
+                   <i class="glyphicon glyphicon-camera input-icon" style="color:#0070ff;"></i><input type="file" accept="image/*" (change)="changeListener($event)">
+                 </span>
              <!-- <i class="glyphicon glyphicon-pencil input-icon" style="color:#f14b4b;"></i> -->
              <!-- <i class="glyphicon glyphicon-stats input-icon" style="color:#56b556;"></i> -->
              <button *ngIf="rows == 4" (click)="savePost();" class="btn btn-default post-submit" type="submit">Post</button>
@@ -16,6 +19,14 @@
 
            <div class="form-group has-feedback" style="margin-bottom:15px;">
               <textarea (blur)="checkBlur()" (focus)="rows = 4;" [(ngModel)]="postText" class="form-control post-input" rows="{{rows}}"  aria-describedby="basic-addon2" id="text-post" placeholder="What do you have to say?"></textarea>
+
+
+
+              
+              
+              <img *ngFor="let image of images" src="{{image}}" style="height:100px; width:auto" alt="">
+
+
            </div>
 
           <div class="panel panel-default" style="background-color:rgb(16, 16, 16);" *ngFor="let post of posts">
@@ -27,14 +38,37 @@
                  </a>
                </div>
                <div class="media-body">
-                 <p class="media-heading" style="text-align:left; color: rgb(124, 98, 160); font-weight: 800;">{{post.name}}</p>
+                 <p class="media-heading" style="text-align:left; color: rgb(124, 98, 160); font-weight: 800;">{{post.NAME}}</p>
                  <div [innerHtml]="post.body" class="post-body"></div>
                </div>
              </div>
+             <div class="post-image-container" *ngIf="post.IMAGES.length > 0 && post.IMAGES[0] != '' && post.IMAGES.length < 2"> 
+              <img *ngFor="let image of post.IMAGES" class="img-rounded img-responsive post-image-single text-center" src="{{image}}" alt="">
+             </div>
+             <div class="post-image-container" *ngIf="post.IMAGES.length == 2 && post.IMAGES[0] != ''"> 
+              <img *ngFor="let image of post.IMAGES" class="img-rounded img-responsive post-image-double text-center" style="width:50%; display:inline;" src="{{image}}" alt="">
+             </div>
+             <div class="post-image-container" *ngIf="post.IMAGES.length >2 && post.IMAGES[0] != ''"> 
+             
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="item active">
+                   <img class="img-responsive post-image-multi" src="{{post.IMAGES[0]}}" alt="...">
+                  </div>
+                  <div class="item" *ngFor="let image of post.IMAGES | slice:1">
+                    <img class="img-responsive post-image-multi" src="{{image}}" alt="...">
+                  </div>
+                </div>
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+              </div>
+
+             </div>
            </div>
-           <!-- <div class="panel-body" style="background-color:rgb(16, 16, 16);">
-              
-           </div> -->
          </div>
 
       </div>
