--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -80,3 +80,50 @@
 .btn-circle.btn-xl: hover{
     box-shadow:0px 0px 10px red;
 }
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+    background-color:rgba(0,0,0,0);
+    padding:5px;
+}
+.btn-file:hover{
+  background-color:rgba(0,0,0,0);
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    /*min-width: 100%;
+    min-height: 100%;*/
+    /*font-size: 100px;*/
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    cursor: inherit;
+    display: block;
+}
+
+.post-image-single {
+  margin:auto;
+  width:100%;
+  border:1px solid #100d13;
+}
+
+.post-image-double {
+  margin:auto;
+  border:1px solid #100d13;
+}
+.post-image-multi {
+  margin:auto;
+  max-height:400px;
+  width:auto;
+}
+.post-image-container {
+  padding-left:60px;
+  padding-right:60px;
+}
+.carousel-inner {
+  height:400px;
+}
