--- a/src/app/pages/profile-side-panel/profile-side-panel.html
+++ b/src/app/pages/profile-side-panel/profile-side-panel.html
@@ -20,7 +20,7 @@
         </div>
       <hr style="max-width:100%; width:100%; margin:0;">
       
-      <div class="panel panel-default" style="background-color:rgba(0,0,0,0) !important;">
+      <div class="panel panel-default" style="background-color:rgba(0,0,0,0) !important; border:0;">
         <div class="panel-title text-center" style="background-color:rgba(0,0,0,0);">
           <p>Friends Online</p>
         </div>
