--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -43,7 +43,7 @@
     opacity:1;
 }
 
-#home .panel, #home .panel-heading, #home .panel-body {
+#home .panel, #home .panel-heading {
     background-color:#2d2638 !important;
     border:0px;
     border-radius:0px;
@@ -54,6 +54,9 @@
     box-shadow: 0px 0px 2px #000;
 }
 
+#home .panel-body {
+  background-color:#3b324a;
+}
 #home .post-body>p {
     color:#a7a7a7;
 }
@@ -171,4 +174,14 @@
     0 {width: 15px;}
     50% {width: 35px;}
     100% {width: 15px;}
+}
+
+.remove-upload {
+  color:#a74040; 
+  font-size:9px;
+  transition: color 300ms ease-in;
+  cursor:pointer;
+}
+.remove-upload:hover {
+  color:#902323;
 }
