--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -69,7 +69,7 @@
   font-size: 24px;
   line-height: 1.33;
   border-radius: 50%;
-  bottom:40px; 
+  bottom:30px; 
   right:40px; 
   position:fixed; 
   z-index:10000;
@@ -77,6 +77,7 @@
   transition:box-shadow 1s ease-in;
   color:#1e1e1e;
 }
+
 
 #home .btn-circle.btn-xl: hover{
     box-shadow:0px 0px 10px red;
@@ -176,12 +177,56 @@
     100% {width: 15px;}
 }
 
-.remove-upload {
+#home .remove-upload {
   color:#a74040; 
   font-size:9px;
   transition: color 300ms ease-in;
   cursor:pointer;
 }
-.remove-upload:hover {
+#home .remove-upload:hover {
   color:#902323;
+}
+#home .btn.btn-primary {
+   color:#16141f;
+   border-color:#16141f;
+   border-radius: 50%;
+   padding: 0px 6px;
+   transition:padding 200ms ease-in;
+}
+
+#home .open>.dropdown-menu {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.85);
+    color:#956bb9;
+}
+
+
+#home .btn-primary:hover {
+    color: #956bb9;
+    background-color: rgba(0, 0, 0, 0.38);
+    border-color: rgba(0, 0, 0, 0.81);
+    box-shadow: 0px 0px 10px #956bb9;
+}
+#home .btn-primary:focus, #home .open>.dropdown-toggle.btn-primary {
+    color: #956bb9;
+    background-color: rgba(0, 0, 0, 0.38);
+    border-color: rgba(0, 0, 0, 0.81);
+    box-shadow: 0px 0px 10px #956bb9;
+    padding:6px 12px;
+}
+
+#home .dropdown-menu>li>a {
+    color: #956bb9;
+}
+
+#home .dropdown-menu>li>a:hover {
+  /*background-color:red;*/
+  background-color: rgba(119, 87, 146, 0.87);
+  color: #16141f;
+}
+
+#home .alert-success {
+    color: #000000;
+    background-color: rgba(149, 107, 185, 0.78);
+    border-color: rgba(0, 0, 0, 0.67);
 }
