--- a/src/app/pages/profile-side-panel/profile-side-panel.css
+++ b/src/app/pages/profile-side-panel/profile-side-panel.css
@@ -93,6 +93,17 @@
     background: none;
 }
 
+.stat {
+    padding: 3px 5px 5px 5px;
+    transition: 
+     background-color 300ms ease-in,
+     border-radius 300ms ease-in;
+}
+.stat:hover {
+    background-color:#16141f;
+    border-radius: 0px 0px 6px 6px;
+}
+
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
